@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- The LPD backend did not set the banner class when the
+	  "banner=yes" option was specified in the device URI
+	  (STR #209)
 	- The imagetoraster filter did not support all of the
 	  page device attributes (STR #208)
 	- The pdftops filter incorrectly auto-rotated pages when
